# mcbuild

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
mod/: build.gradle  gradle.properties  settings.gradle
mod/src/main/java/com/mcbuild/mod/: BlockStateCodec.java  BuildSessionManager.java  McbuildMod.java
mod/src/main/java/com/mcbuild/mod/command/: BuildCommand.java
mod/src/main/java/com/mcbuild/mod/net/: ProtocolMessages.java  WsClient.java
mod/src/main/resources/: pack.mcmeta
src/mcbuild/: __init__.py  cli.py  config.py  palette.py  rundir.py  voxel.py
src/mcbuild/agent/: loop.py  prompts.py  query.py  tools.py
src/mcbuild/assets/: NOTICE.md  minecraft_block_registry.json
src/mcbuild/dsl/: REFERENCE.md  errors.py  sandbox.py  stdlib.py
src/mcbuild/export/: schem.py
src/mcbuild/llm/: client.py  fake.py
src/mcbuild/render/: blockmodel.py  blockstate.py  camera.py  culling.py  iso.py  raster.py  sixel.py  textures.py  views.py
src/mcbuild/server/: __init__.py  delta.py  protocol.py  session.py  ws_server.py
tests/: test_agent_loop.py  test_blockstate_dsl.py  test_camera.py  test_cli.py  test_dsl_sandbox.py  test_dsl_stdlib.py  test_export_schem.py  test_llm_streaming.py  test_palette.py  test_palette_registry.py  test_prompts.py  test_query.py  test_render.py  test_server_delta.py  test_textures.py  test_voxel.py
