[project]
name = "mcbuild"
version = "0.1.0"
description = "Text-to-Minecraft LLM building agent"
readme = "README.md"
authors = [
    { name = "Harry Yu", email = "harryyunull@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "numpy>=1.26",
    "pillow>=10.0",
    "nbtlib>=2.0",
    "rich>=13.0",
    "rich-pixels>=3.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.scripts]
mcbuild = "mcbuild.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcbuild"]
